--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -26,6 +26,10 @@
         <li>Bola Nursery and Primary School</li>
         <li>Federal Government College, <em>Odogbolu.</em></li>
         <li>Federal University of Technology, <em>Akure.</em></li>
+        <li>Clemmy Elementary School</li>
+        <li>Bola Nursery and Primary School</li>
+        <li>Federal Government College, <em>Odogbolu.</em></li>
+        <li>Federal University of Technology, <em>Akure.</em></li>
     </ul>
 
 </body>
