--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -6,6 +6,17 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
+    .flag {
+      background-color: red;
+      height: 400px;
+      width: 50%;
+      margin-left: 25%;
+      margin-top: 150px;
+    }
+
+    .of-laos {
+      background-color: white;
+    }
     
   </style>
 </head>
@@ -24,7 +35,7 @@ https://appbrewery.github.io/flag-of-laos/
   <div class="flag">
     <p>The Flag</p>
     <div>
-      <div>
+      <div class="of-laos">
         <p>of Laos</p>
       </div>
     </div>
