--- a/8.1 CSS Float/index.html
+++ b/8.1 CSS Float/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <!-- TODO
 1. Make both paragraph elements wrap around the image.
 2. Use Float to move the cat div to the left and the dog div to the right.
 3. Use clear to make the footer go below both the cat and dog div. -->
 
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>CSS Float</title>
@@ -21,15 +21,26 @@
 
     .cat {
       background-color: aquamarine;
+      float: left;
+    }
+
+    .cat > img {
+      float: left;
     }
 
     .dog {
       background-color: coral;
+      float: right;
+    }
+
+    .dog > img {
+      float: left;
     }
 
     footer {
       text-align: center;
       background-color: blueviolet;
+      clear: both;
     }
   </style>
 </head>
