--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -11,59 +11,28 @@
       font-family: 'Sono', sans-serif;
     }
 
-    .pricing-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      gap: 2rem;
+    .red-circle {
+      width: 200px;
+      height: 200px;
+      background-color: red;
+      border-radius: 50%;
+      position: absolute;
+      top: 150px;
+      left: 250px;
     }
-
-    .pricing-plan {
-      flex: 1;
-      max-width: 400px;
-      padding: 20px;
-      background-color: #f2f2f2;
-      border-radius: 5px;
-      text-align: center;
-    }
-
-    .plan-title {
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    .plan-price {
-      font-size: 48px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    .plan-features {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .plan-features li {
-      margin-bottom: 20px;
-    }
-
-    .plan-button {
-      padding: 10px;
-      background-color: #ff6600;
-      color: #fff;
-      border-radius: 5px;
-      border: none;
+    
+    .blue-box {
+      background-color: blue;
+      width: 500px;
+      height: 300px;
+      position: relative;
+      top: 200px;
+      left: 200px;
     }
 
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
-      .pricing-container {
-        flex-direction: column;
-        height: 100%;
-      }
+      
     }
   </style>
 </head>
