--- a/13.0 Capstone Website/index.html
+++ b/13.0 Capstone Website/index.html
@@ -18,6 +18,18 @@
             </ul>
         </nav>
     </header>
+
+    <header class="nav-container">
+        <h1 class="logo">BELLO</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
     
     <main>
         <section class="hero">
@@ -33,24 +45,6 @@
 
         <section class="about">
 
-        </section>
-
-        <section class="portfolio">
-            <div class="skill">
-                <img src="./images/web development svg.svg" class="svg" alt="Web Development" width="65px" height="65px">
-                <h3>Web Develoment</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore reprehenderit qui repudiandae expedita ipsam sequi illum quos consequuntur provident. Ex, adipisci optio beatae officia numquam ipsa officiis qui mollitia voluptate.</p>
-            </div>
-            <div class="skill">
-                <img src="./images/networking svg.svg" class="svg" alt="Networking" width="80px" height="80px">
-                <h3>Networking</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquam voluptas dolorum a nulla sint nostrum id magnam quo minus, qui amet facilis doloremque? Necessitatibus voluptatibus totam similique possimus quasi.</p>
-            </div>
-            <div class="skill">
-                <img src="./images/web design svg.svg" class="svg" alt="Web Design" width="80px" height="80px">
-                <h3>Web Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aliquam voluptas dolorum a nulla sint nostrum id magnam quo minus, qui amet facilis doloremque? Necessitatibus voluptatibus totam similique possimus quasi.</p>
-            </div>
         </section>
 
         <section class="portfolio">
